--- a/config/physicsmod/physics_mobs_client_config.json
+++ b/config/physicsmod/physics_mobs_client_config.json
@@ -1,3 +1,220 @@
 {
-  "customizedMobs": []
+  "customizedMobs": [
+    "minecraft:leash_knot",
+    5,
+    "minecraft:wither_skull",
+    5,
+    "minecraft:tnt",
+    5,
+    "minecraft:piglin",
+    5,
+    "minecraft:elder_guardian",
+    5,
+    "minecraft:wither",
+    5,
+    "minecraft:boat",
+    5,
+    "minecraft:guardian",
+    5,
+    "minecraft:skeleton",
+    5,
+    "minecraft:pig",
+    5,
+    "minecraft:chest_minecart",
+    5,
+    "minecraft:cat",
+    5,
+    "minecraft:dragon_fireball",
+    5,
+    "minecraft:endermite",
+    5,
+    "minecraft:fox",
+    5,
+    "minecraft:tropical_fish",
+    5,
+    "minecraft:fishing_bobber",
+    5,
+    "minecraft:trader_llama",
+    5,
+    "minecraft:tnt_minecart",
+    5,
+    "minecraft:hoglin",
+    5,
+    "minecraft:dolphin",
+    5,
+    "minecraft:sheep",
+    5,
+    "minecraft:snow_golem",
+    5,
+    "minecraft:potion",
+    5,
+    "minecraft:spider",
+    5,
+    "minecraft:armor_stand",
+    5,
+    "minecraft:fireball",
+    5,
+    "minecraft:mooshroom",
+    5,
+    "minecraft:vex",
+    5,
+    "minecraft:zombie",
+    5,
+    "minecraft:horse",
+    5,
+    "minecraft:ghast",
+    5,
+    "minecraft:mule",
+    5,
+    "minecraft:end_crystal",
+    5,
+    "minecraft:strider",
+    5,
+    "minecraft:arrow",
+    5,
+    "minecraft:rabbit",
+    5,
+    "minecraft:painting",
+    5,
+    "minecraft:spectral_arrow",
+    5,
+    "minecraft:firework_rocket",
+    5,
+    "minecraft:ender_pearl",
+    5,
+    "minecraft:villager",
+    5,
+    "minecraft:pufferfish",
+    5,
+    "minecraft:evoker",
+    5,
+    "minecraft:magma_cube",
+    5,
+    "minecraft:witch",
+    5,
+    "minecraft:donkey",
+    5,
+    "minecraft:wolf",
+    5,
+    "minecraft:ender_dragon",
+    5,
+    "minecraft:lightning_bolt",
+    5,
+    "minecraft:bee",
+    5,
+    "minecraft:pillager",
+    5,
+    "minecraft:small_fireball",
+    5,
+    "minecraft:minecart",
+    5,
+    "minecraft:zombie_villager",
+    5,
+    "minecraft:turtle",
+    5,
+    "minecraft:evoker_fangs",
+    5,
+    "minecraft:player",
+    5,
+    "minecraft:egg",
+    5,
+    "minecraft:chicken",
+    5,
+    "minecraft:cow",
+    5,
+    "minecraft:shulker",
+    5,
+    "minecraft:zoglin",
+    5,
+    "minecraft:cod",
+    5,
+    "minecraft:slime",
+    5,
+    "minecraft:bat",
+    5,
+    "minecraft:ocelot",
+    5,
+    "minecraft:spawner_minecart",
+    5,
+    "minecraft:zombie_horse",
+    5,
+    "minecraft:squid",
+    5,
+    "minecraft:parrot",
+    5,
+    "minecraft:eye_of_ender",
+    5,
+    "minecraft:stray",
+    5,
+    "minecraft:llama",
+    5,
+    "minecraft:hopper_minecart",
+    5,
+    "minecraft:enderman",
+    5,
+    "minecraft:creeper",
+    5,
+    "minecraft:silverfish",
+    5,
+    "minecraft:llama_spit",
+    5,
+    "minecraft:item",
+    5,
+    "minecraft:drowned",
+    5,
+    "minecraft:polar_bear",
+    5,
+    "minecraft:phantom",
+    5,
+    "minecraft:falling_block",
+    5,
+    "minecraft:giant",
+    0,
+    "minecraft:panda",
+    5,
+    "minecraft:furnace_minecart",
+    5,
+    "minecraft:piglin_brute",
+    5,
+    "minecraft:snowball",
+    5,
+    "minecraft:trident",
+    5,
+    "minecraft:zombified_piglin",
+    5,
+    "minecraft:illusioner",
+    5,
+    "minecraft:salmon",
+    5,
+    "minecraft:wandering_trader",
+    5,
+    "minecraft:area_effect_cloud",
+    5,
+    "minecraft:blaze",
+    5,
+    "minecraft:item_frame",
+    5,
+    "minecraft:iron_golem",
+    5,
+    "minecraft:cave_spider",
+    5,
+    "minecraft:husk",
+    5,
+    "minecraft:ravager",
+    5,
+    "minecraft:shulker_bullet",
+    5,
+    "minecraft:wither_skeleton",
+    5,
+    "minecraft:vindicator",
+    5,
+    "minecraft:skeleton_horse",
+    5,
+    "minecraft:command_block_minecart",
+    5,
+    "minecraft:experience_bottle",
+    5,
+    "minecraft:experience_orb",
+    5
+  ]
 }
