--- a/config/MusicTriggers/bloodnwine2/main.toml
+++ b/config/MusicTriggers/bloodnwine2/main.toml
@@ -229,6 +229,48 @@
 	[songs.chaliceofeternity]
 		triggers = [ "time-day" "dimension-overworld" ]
 
+	# You Disappeared [day]
+	[songs.abedofashes]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.afaintlightonthesurface]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.falseidols]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.quicksand]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.smokeandmirrors]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.thedaywhenyoulostyoursmile]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.threadbare]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.youdisappeared]
+		triggers = [ "time-day" "dimension-overworld" ]
+
+	# The Foundations of Ruin [day]
+	[songs.aseductionofmalice]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.boundtomemory]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.deceivedbyshelter]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.entangledinmortar]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.hauntedbywhispers]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.inthecompanyofruin]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.lonesomehallsofruin]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.remnantsofthemissing]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.thecollectorsharvest]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.theeternalveil]
+		triggers = [ "time-day" "dimension-overworld" ]
+	[songs.themanifestation]
+		triggers = [ "time-day" "dimension-overworld" ]
+
 		# Night
 		# 0 = Any moon phase
 		# 1 = Full Moon
