--- a/config/FatherToast/specialai/general.toml
+++ b/config/FatherToast/specialai/general.toml
@@ -26,7 +26,18 @@
 	# Additional value after the entity type is the chance (0.0 to 1.0) for entities of that type to spawn with the AI.
 	# <Entity List> Format: [ "namespace:entity_type value", ... ], Default: [ "minecraft:chicken 1.0", "minecraft:cow 1.0", "minecraft:pig 1.0", "minecraft:sheep 1.0", "minecraft:rabbit 1.0", "minecraft:strider 1.0", "minecraft:squid 1.0", "minecraft:cod 1.0", "minecraft:salmon 1.0", "minecraft:tropical_fish 1.0" ]
 	#    Range for Values: 0.0 ~ 1.0
-	animals.depacify_entities.whitelist = []
+	animals.depacify_entities.whitelist = [
+		"minecraft:chicken 1.0",
+		"minecraft:cow 1.0",
+		"minecraft:pig 1.0",
+		"minecraft:sheep 1.0",
+		"minecraft:rabbit 1.0",
+		"minecraft:strider 1.0",
+		"minecraft:squid 1.0",
+		"minecraft:cod 1.0",
+		"minecraft:salmon 1.0",
+		"minecraft:tropical_fish 1.0"
+	]
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	animals.depacify_entities.blacklist = []
 
@@ -34,7 +45,14 @@
 	# Additional value after the entity type is the chance (0.0 to 1.0) for entities of that type to spawn with the AI.
 	# <Entity List> Format: [ "namespace:entity_type value", ... ], Default: [ "minecraft:cow 0.04", "minecraft:rabbit 0.02", "minecraft:strider 0.02", "minecraft:squid 1.0", "minecraft:cod 0.02", "minecraft:salmon 0.04" ]
 	#    Range for Values: 0.0 ~ 1.0
-	animals.aggressive_entities.whitelist = []
+	animals.aggressive_entities.whitelist = [
+		"minecraft:cow 0.04",
+		"minecraft:rabbit 0.02",
+		"minecraft:strider 0.02",
+		"minecraft:squid 1.0",
+		"minecraft:cod 0.02",
+		"minecraft:salmon 0.04"
+	]
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	animals.aggressive_entities.blacklist = []
 
@@ -85,100 +103,10 @@
 	# <Entity List> Format: [ "namespace:entity_type value1 value2", ... ], Default: [ "default 0.2 0.5", "minecraft:skeleton 1.0 0.5", "minecraft:stray 1.0 0.5", "minecraft:wither_skeleton 1.0 0.5" ]
 	#    Range for Values: 0.0 ~ 1.0
 	reaction_ai.dodge_arrows.whitelist = [
-		"default 0.25 0.1",
-		"minecraft:skeleton 0.25 0.1",
-		"minecraft:stray 0.25 0.1",
-		"minecraft:wither_skeleton 0.25 0.1",
-		"minecraft:zombified_piglin 0.25 0.1",
-		"minecraft:piglin 0.25 0.1",
-		"minecraft:piglin_brute 0.25 0.1",
-		"minecraft:zombie 0.25 0.1",
-		"minecraft:zombie_villager 0.25 0.1",
-		"minecraft:husk 0.25 0.1",
-		"minecraft:enderman 0.25 0.1",
-		"minecraft:drowned 0.25 0.1",
-		"minecraft:evoker 0.25 0.1",
-		"minecraft:pillager 0.25 0.1",
-		"minecraft:vindicator 0.25 0.1",
-		"minecraft:witch 0.25 0.1",
-		"minecraft:illusioner 0.25 0.1",
-		"illagers_plus:archer 0.25 0.1",
-		"illagers_plus:berserker 0.25 0.1",
-		"illagers_plus:enchanter 0.25 0.1",
-		"illagers_plus:frostmancer 0.25 0.1",
-		"illagers_plus:furantur 0.25 0.1",
-		"illagers_plus:hoarder 0.25 0.1",
-		"illagers_plus:illager_general 0.25 0.1",
-		"illagers_plus:miner 0.25 0.1",
-		"illagers_plus:necromancer 0.25 0.1",
-		"iceandfire:dread_ghoul 0.25 0.1",
-		"iceandfire:dread_knight 0.25 0.1",
-		"iceandfire:dread_thrall 0.25 0.1",
-		"iceandfire:dread_lich 0.25 0.1",
-		"workshopsofdoom:excavator 0.25 0.1",
-		"quark:forgotten 0.25 0.1",
-		"quark:wrapped 0.25 0.1",
-		"dead_guys_untitled_deep_dark_:sculk_villager 0.25 0.1",
-		"dead_guys_untitled_deep_dark_:zombie_of_the_sculk 0.25 0.1",
-		"tinyskeletons:baby_wither_skeleton 0.25 0.1",
-		"tinyskeletons:baby_skeleton 0.25 0.1",
-		"tinyskeletons:baby_stray 0.25 0.1",
-		"infernalexp:embody 0.25 0.1",
-		"infernalexp:blackstone_dwarf 0.25 0.1",
-		"betternether:jungle_skeleton 0.25 0.1",
-		"betterendforge:shadow_walker 0.25 0.1",
-		"dungeons_mobs:drowned_necromancer 0.25 0.1",
-		"dungeons_mobs:frozen_zombie 0.25 0.1",
-		"dungeons_mobs:fungus_thrower 0.25 0.1",
-		"dungeons_mobs:iceologer 0.25 0.1",
-		"dungeons_mobs:illusioner 0.25 0.1",
-		"dungeons_mobs:jungle_zombie 0.25 0.1",
-		"dungeons_mobs:mossy_skeleton 0.25 0.1",
-		"dungeons_mobs:mountaineer 0.25 0.1",
-		"dungeons_mobs:necromancer 0.25 0.1",
-		"dungeons_mobs:royal_guard 0.25 0.1",
-		"dungeons_mobs:skeleton_vanguard 0.25 0.1",
-		"dungeons_mobs:sunken_skeleton 0.25 0.1",
-		"dungeons_mobs:wavewhisperer 0.25 0.1",
-		"dungeons_mobs:whisperer 0.25 0.1",
-		"dungeons_mobs:windcaller 0.25 0.1",
-		"dungeons_mobs:wraith 0.25 0.1",
-		"dungeons_mobs:zombified_fungus_thrower 0.25 0.1",
-		"specialmobs:spitfirewitherskeleton 0.25 0.1",
-		"specialmobs:strayskeleton 0.25 0.1",
-		"specialmobs:thiefenderman 0.25 0.1",
-		"specialmobs:undeadwitch 0.25 0.1",
-		"specialmobs:vampirezombifiedpiglin 0.25 0.1",
-		"specialmobs:weatheredskeleton 0.25 0.1",
-		"specialmobs:wildswitch 0.25 0.1",
-		"specialmobs:windwitch 0.25 0.1",
-		"specialmobs:abyssaldrowned 0.25 0.1",
-		"specialmobs:blindingenderman 0.25 0.1",
-		"specialmobs:brutedrowned 0.25 0.1",
-		"specialmobs:bruteskeleton 0.25 0.1",
-		"specialmobs:brutewitherskeleton 0.25 0.1",
-		"specialmobs:brutezombie 0.25 0.1",
-		"specialmobs:brutezombifiedpiglin 0.25 0.1",
-		"specialmobs:dominationwitch 0.25 0.1",
-		"specialmobs:drowned 0.25 0.1",
-		"specialmobs:enderman 0.25 0.1",
-		"specialmobs:fishingdrowned 0.25 0.1",
-		"specialmobs:fishingzombie 0.25 0.1",
-		"specialmobs:fishingzombifiedpiglin 0.25 0.1",
-		"specialmobs:flameenderman 0.25 0.1",
-		"specialmobs:frozendrowned 0.25 0.1",
-		"specialmobs:frozenzombie 0.25 0.1",
-		"specialmobs:minienderman 0.25 0.1",
-		"specialmobs:mirageenderman 0.25 0.1",
-		"specialmobs:plaguedrowned 0.25 0.1",
-		"specialmobs:plaguezombie 0.25 0.1",
-		"specialmobs:plaguezombifiedpiglin 0.25 0.1",
-		"specialmobs:poisonskeleton 0.25 0.1",
-		"specialmobs:runicenderman 0.25 0.1",
-		"specialmobs:shadowswitch 0.25 0.1",
-		"specialmobs:skeleton 0.25 0.1",
-		"specialmobs:sniperskeleton 0.25 0.1",
-		"specialmobs:sniperwitherskeleton 0.25 0.1"
+		"default 0.2 0.5",
+		"minecraft:skeleton 1.0 0.5",
+		"minecraft:stray 1.0 0.5",
+		"minecraft:wither_skeleton 1.0 0.5"
 	]
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	reaction_ai.dodge_arrows.blacklist = []
@@ -201,51 +129,10 @@
 		"minecraft:horse",
 		"minecraft:donkey",
 		"minecraft:mule",
-		"minecraft:mooshroom",
-		"minecraft:wolf",
 		"~minecraft:llama",
 		"minecraft:strider",
 		"minecraft:hoglin",
-		"minecraft:zoglin",
-		"minecraft:magma_cube",
-		"minecraft:sheep",
-		"quark:toretoise",
-		"cavesandcliffs:goat",
-		"extendedmushrooms:mushroom_sheep",
-		"iceandfire:dread_horse",
-		"iceandfire:hippogryph",
-		"iceandfire:cockatrice",
-		"iceandfire:dread_beast",
-		"specialmobs:caramelslime",
-		"specialmobs:bouncingmagmacube",
-		"specialmobs:blueberryslime",
-		"specialmobs:blindingsilverfish",
-		"specialmobs:blackberryslime",
-		"specialmobs:albinosilverfish",
-		"specialmobs:strawberryslime",
-		"specialmobs:stickymagmacube",
-		"specialmobs:spitfirewitherskeleton",
-		"specialmobs:spider",
-		"specialmobs:slime",
-		"specialmobs:potionslime",
-		"specialmobs:poisonspider",
-		"specialmobs:palespider",
-		"specialmobs:motherspider",
-		"specialmobs:magmacube",
-		"specialmobs:lemonslime",
-		"specialmobs:hardenedmagmacube",
-		"specialmobs:grapeslime",
-		"specialmobs:frozenslime",
-		"specialmobs:flyingspider",
-		"specialmobs:watermelonslime",
-		"specialmobs:volatilemagmacube",
-		"specialmobs:unholyghast",
-		"specialmobs:corporealshiftghast",
-		"specialmobs:firespider",
-		"specialmobs:kingghast",
-		"specialmobs:queenghast",
-		"specialmobs:witchspider",
-		"specialmobs:waterspider"
+		"minecraft:zoglin"
 	]
 	# List of mobs that can be ridden on by small riders or normal-sized riders that are babies
 	# (not all entities can be controlled by their rider).
@@ -253,36 +140,7 @@
 	jockeys.mount_entities.small_list = [
 		"minecraft:chicken",
 		"minecraft:rabbit",
-		"minecraft:cave_spider",
-		"minecraft:fox",
-		"minecraft:ocelot",
-		"quark:shiba",
-		"quark:frog",
-		"quark:foxhound",
-		"infernalexp:blindsight",
-		"infernalexp:shroomloin",
-		"infernalexp:warpbeetle",
-		"betternether:flying_pig",
-		"dungeons_mobs:redstone_cube",
-		"specialmobs:babyspider",
-		"specialmobs:babyghast",
-		"specialmobs:babycavespider",
-		"specialmobs:silverfish",
-		"specialmobs:poisonsilverfish",
-		"specialmobs:palecavespider",
-		"specialmobs:mothercavespider",
-		"specialmobs:flyingsilverfish",
-		"specialmobs:flyingcavespider",
-		"specialmobs:fishingsilverfish",
-		"specialmobs:firesilverfish",
-		"specialmobs:firecavespider",
-		"specialmobs:desiccatedsilverfish",
-		"specialmobs:desertcavespider",
-		"specialmobs:cavespider",
-		"specialmobs:watercavespider",
-		"specialmobs:toughsilverfish",
-		"specialmobs:witchcavespider",
-		"specialmobs:webcavespider"
+		"minecraft:cave_spider"
 	]
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	jockeys.mount_entities.blacklist = []
@@ -295,87 +153,17 @@
 		"minecraft:skeleton 0.1",
 		"minecraft:stray 0.1",
 		"minecraft:wither_skeleton 0.1",
-		"minecraft:zombified_piglin 0.1",
+		"minecraft:zombie 0.05",
+		"minecraft:creeper 0.05",
+		"minecraft:witch 0.05",
 		"minecraft:piglin 0.1",
-		"minecraft:piglin_brute 0.1",
-		"minecraft:zombie 0.1",
-		"minecraft:zombie_villager 0.1",
-		"minecraft:husk 0.1",
-		"minecraft:enderman 0.1",
-		"minecraft:drowned 0.1",
-		"minecraft:evoker 0.1",
-		"minecraft:pillager 0.1",
-		"minecraft:vindicator 0.1",
-		"minecraft:witch 0.1",
-		"minecraft:illusioner 0.1",
-		"illagers_plus:archer 0.1",
-		"illagers_plus:berserker 0.1",
-		"illagers_plus:enchanter 0.1",
-		"illagers_plus:frostmancer 0.1",
-		"illagers_plus:furantur 0.1",
-		"illagers_plus:hoarder 0.1",
-		"illagers_plus:illager_general 0.1",
-		"illagers_plus:miner 0.1",
-		"illagers_plus:necromancer 0.1",
-		"iceandfire:dread_ghoul 0.1",
-		"iceandfire:dread_knight 0.1",
-		"iceandfire:dread_thrall 0.1",
-		"iceandfire:dread_lich 0.1",
-		"workshopsofdoom:excavator 0.1",
-		"quark:forgotten 0.1",
-		"quark:wrapped 0.1",
-		"dead_guys_untitled_deep_dark_:sculk_villager 0.1",
-		"dead_guys_untitled_deep_dark_:zombie_of_the_sculk 0.1",
-		"infernalexp:embody 0.1",
-		"infernalexp:blackstone_dwarf 0.1",
-		"betternether:jungle_skeleton 0.1",
-		"betterendforge:shadow_walker 0.1",
-		"specialmobs:spitfirewitherskeleton 0.1",
-		"specialmobs:strayskeleton 0.1",
-		"specialmobs:thiefenderman 0.1",
-		"specialmobs:undeadwitch 0.1",
-		"specialmobs:vampirezombifiedpiglin 0.1",
-		"specialmobs:weatheredskeleton 0.1",
-		"specialmobs:wildswitch 0.1",
-		"specialmobs:windwitch 0.1",
-		"specialmobs:abyssaldrowned 0.1",
-		"specialmobs:blindingenderman 0.1",
-		"specialmobs:brutedrowned 0.1",
-		"specialmobs:bruteskeleton 0.1",
-		"specialmobs:brutewitherskeleton 0.1",
-		"specialmobs:brutezombie 0.1",
-		"specialmobs:brutezombifiedpiglin 0.1",
-		"specialmobs:dominationwitch 0.1",
-		"specialmobs:drowned 0.1",
-		"specialmobs:enderman 0.1",
-		"specialmobs:fishingdrowned 0.1",
-		"specialmobs:fishingzombie 0.1",
-		"specialmobs:fishingzombifiedpiglin 0.1",
-		"specialmobs:flameenderman 0.1",
-		"specialmobs:frozendrowned 0.1",
-		"specialmobs:frozenzombie 0.1",
-		"specialmobs:mirageenderman 0.1",
-		"specialmobs:plaguedrowned 0.1",
-		"specialmobs:plaguezombie 0.1",
-		"specialmobs:plaguezombifiedpiglin 0.1",
-		"specialmobs:poisonskeleton 0.1",
-		"specialmobs:runicenderman 0.1",
-		"specialmobs:shadowswitch 0.1",
-		"specialmobs:skeleton 0.1",
-		"specialmobs:sniperskeleton 0.1",
-		"specialmobs:sniperwitherskeleton 0.1"
+		"minecraft:piglin_brute 0.1"
 	]
 	# List of mobs that can only ride small mounts or normal-sized mounts that are babies and the
 	# chance for them to gain the rider AI. Note that the entity must have task-based AI enabled.
 	# <Entity List> Format: [ "namespace:entity_type value", ... ], Default: []
 	#    Range for Values: 0.0 ~ 1.0
-	jockeys.rider_entities.small_list = [
-		"tinyskeletons:baby_wither_skeleton 0.2",
-		"tinyskeletons:baby_skeleton 0.2",
-		"tinyskeletons:baby_stray 0.2",
-		"dead_guys_untitled_deep_dark_:sculk_emissiary 0.2",
-		"specialmobs:minienderman 0.2"
-	]
+	jockeys.rider_entities.small_list = []
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	jockeys.rider_entities.blacklist = []
 
@@ -388,80 +176,8 @@
 	# <Entity List> Format: [ "namespace:entity_type value", ... ], Default: [ "minecraft:zombie 1.0", "minecraft:creeper 1.0" ]
 	#    Range for Values: 0.0 ~ 1.0
 	door_breaking.entities.whitelist = [
-		"minecraft:skeleton 0.25",
-		"minecraft:stray 0.25",
-		"minecraft:wither_skeleton 0.25",
-		"minecraft:zombified_piglin 0.25",
-		"minecraft:piglin 0.25",
-		"minecraft:piglin_brute 0.25",
-		"minecraft:husk 0.25",
-		"minecraft:enderman 0.25",
-		"minecraft:drowned 0.25",
-		"minecraft:evoker 0.25",
-		"minecraft:pillager 0.25",
-		"minecraft:vindicator 0.25",
-		"minecraft:witch 0.25",
-		"minecraft:illusioner 0.25",
-		"illagers_plus:archer 0.25",
-		"illagers_plus:berserker 0.25",
-		"illagers_plus:black_iron_golem 0.25",
-		"illagers_plus:enchanter 0.25",
-		"illagers_plus:frostmancer 0.25",
-		"illagers_plus:furantur 0.25",
-		"illagers_plus:hoarder 0.25",
-		"illagers_plus:illager_general 0.25",
-		"illagers_plus:miner 0.25",
-		"illagers_plus:necromancer 0.25",
-		"iceandfire:dread_ghoul 0.25",
-		"iceandfire:dread_knight 0.25",
-		"iceandfire:dread_thrall 0.25",
-		"iceandfire:dread_lich 0.25",
-		"iceandfire:troll 0.25",
-		"workshopsofdoom:excavator 0.25",
-		"quark:forgotten 0.25",
-		"quark:wrapped 0.25",
-		"dead_guys_untitled_deep_dark_:sculk_emissiary 0.25",
-		"dead_guys_untitled_deep_dark_:sculk_mite 0.25",
-		"dead_guys_untitled_deep_dark_:warden 0.25",
-		"tinyskeletons:baby_wither_skeleton 0.25",
-		"tinyskeletons:baby_skeleton 0.25",
-		"tinyskeletons:baby_stray 0.25",
-		"infernalexp:embody 0.25",
-		"infernalexp:blackstone_dwarf 0.25",
-		"betternether:jungle_skeleton 0.25",
-		"betterendforge:shadow_walker 0.25",
-		"minecraft:creeper 1.0",
-		"specialmobs:spitfirewitherskeleton 0.25",
-		"specialmobs:strayskeleton 0.25",
-		"specialmobs:thiefenderman 0.25",
-		"specialmobs:undeadwitch 0.25",
-		"specialmobs:vampirezombifiedpiglin 0.25",
-		"specialmobs:weatheredskeleton 0.25",
-		"specialmobs:wildswitch 0.25",
-		"specialmobs:windwitch 0.25",
-		"specialmobs:abyssaldrowned 0.25",
-		"specialmobs:blindingenderman 0.25",
-		"specialmobs:brutedrowned 0.25",
-		"specialmobs:bruteskeleton 0.25",
-		"specialmobs:brutewitherskeleton 0.25",
-		"specialmobs:brutezombifiedpiglin 0.25",
-		"specialmobs:dominationwitch 0.25",
-		"specialmobs:drowned 0.25",
-		"specialmobs:enderman 0.25",
-		"specialmobs:fishingdrowned 0.25",
-		"specialmobs:fishingzombifiedpiglin 0.25",
-		"specialmobs:flameenderman 0.25",
-		"specialmobs:frozendrowned 0.25",
-		"specialmobs:minienderman 0.25",
-		"specialmobs:mirageenderman 0.25",
-		"specialmobs:plaguedrowned 0.25",
-		"specialmobs:plaguezombifiedpiglin 0.25",
-		"specialmobs:poisonskeleton 0.25",
-		"specialmobs:runicenderman 0.25",
-		"specialmobs:shadowswitch 0.25",
-		"specialmobs:skeleton 0.25",
-		"specialmobs:sniperskeleton 0.25",
-		"specialmobs:sniperwitherskeleton 0.25"
+		"minecraft:zombie 1.0",
+		"minecraft:creeper 1.0"
 	]
 	# <Entity List> Format: [ "namespace:entity_type", ... ], Default: []
 	door_breaking.entities.blacklist = []
