curtain and drying racks
curtain and drying racks

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -48,7 +48,6 @@ Natural Absorption
 Baumkuchen's Explosive Arrows
 Flaming Arrows
 Quark
-Silent's Mechanisms
 Alex's Mobs
 AstikorCarts
 Biomes O' Plenty
@@ -72,3 +71,4 @@ Guard Villagers
 Blocky Siege
 Curios API
 Music Triggers
+Silents_mechanisms
