--- a/config/physicsmod/physics_client_config.json
+++ b/config/physicsmod/physics_client_config.json
@@ -61,6 +61,10 @@
     0.0,
     -9.81,
     0.0,
+    "deadlyworld:sewers",
+    0.0,
+    -9.81,
+    0.0,
     "wildupdate:deep_dark_dimension",
     0.0,
     -9.81,
@@ -84,6 +88,10 @@
     2.0,
     0.0,
     "dead_guys_untitled_deep_dark_:deep_darky",
+    0.0,
+    2.0,
+    0.0,
+    "deadlyworld:sewers",
     0.0,
     2.0,
     0.0,
