Added link to closed perms modrinth list
Added link to closed perms modrinth list

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,9 @@ bloodnwine2-96kbs-48khz-25-Reduc.7z
 bloodnwine2-64kbs-48khz-50-Reduc
 bloodnwine2-64kbs-48khz-50-Reduc.7z
 
+#ignore closed perms list for exporting to Modrinth
+mods_-_closed_perms_list_for_exporting_to_Modrinth.7z
+
 #ignore Blood-N-Wine-2-Music Test Folders
 0_Blood-N-Wine-2-Assets/resourcepacks/Blood-N-Wine-2-Music
 
