--- a/.gitignore
+++ b/.gitignore
@@ -107,7 +107,10 @@ oculus.properties
 
 #ignore bloodnwine2resources extraction_cache.bomb to prevent sound files from not extracting
 #due to the program thinking the songs folder is already installed
-extraction_cache.bomb
+config/bloodnwine2resources/extraction_cache/extraction_cache.bomb
+config/bloodnwine2resources/extraction_cache/extraction_cache_Blood-N-Wine-2-Menu.bomb
+config/bloodnwine2resources/extraction_cache/extraction_cache_Blood-N-Wine-2-Music-II.bomb
+config/bloodnwine2resources/extraction_cache/extraction_cache_Blood-N-Wine-2-Music.bomb
 
 #ignore options.txt
 options.txt
