--- a/config/drippyloadingscreen/config.cfg
+++ b/config/drippyloadingscreen/config.cfg
@@ -1,4 +1,26 @@
-##[general]
+##[logging]
 
-B:early_fade_out_elements = 'true';
-B:allow_universal_layouts = 'false';
+B:printwarnings = 'true';
+
+
+##[layouteditor]
+
+B:editordeleteconfirmation = 'true';
+I:gridsize = '10';
+B:showgrid = 'false';
+
+
+##[customization]
+
+B:showcustomizationcontrols = 'true';
+B:enablekeybinds = 'true';
+
+
+##[loading_behaviour]
+
+B:custom_sound_engine_reloading = 'true';
+
+
+##[ui]
+
+F:uiscale = '1.0';
