--- a/config/dynamic_lights_reforged.toml
+++ b/config/dynamic_lights_reforged.toml
@@ -3,7 +3,7 @@
 [Settings]
 
 	[Settings."Lighting Settings"]
-		"Quality Mode (OFF, SLOW, FAST, REALTIME)" = "REALTIME"
+		"Quality Mode (OFF, SLOW, FAST, REALTIME)" = "FAST"
 		"Dynamic Entity Lighting" = true
 		"Dynamic TileEntity Lighting" = true
 		"Only Update On Position Change" = true
