--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -22,7 +22,7 @@
 #  mixin.bugfix.forge_vehicle_packets=true # (default)
 #  mixin.bugfix.item_cache_flag=true # (default)
 #  mixin.bugfix.mc218112=true # (default)
-#  mixin.bugfix.model_data_manager_cme=true # (default)
+#  mixin.bugfix.model_data_manager_cme=false # (overridden for mod compat)
 #  mixin.bugfix.packet_leak=false # (default)
 #  mixin.bugfix.paper_chunk_patches=true # (default)
 #  mixin.bugfix.preserve_early_window_pos=true # (default)
@@ -99,3 +99,4 @@ mixin.perf.dynamic_block_codecs=true
 mixin.perf.dynamic_resources=true
 mixin.perf.faster_item_rendering=true
 mixin.perf.reuse_datapacks=true
+mixin.bugfix.model_data_manager_cme=true
