removed default options + zombie nerf
removed default options + zombies can no longer break beds

--- a/config/BBOutlineReloaded.cfg
+++ b/config/BBOutlineReloaded.cfg
@@ -26,7 +26,7 @@ mobSpawners {
 
 structures {
     # If set to true stronghold bounding boxes are drawn. (default: false)
-    B:drawStrongholds=false
+    B:drawStrongholds=true
 
     # If set to true bastion remnants will be drawn. (default: true)
     B:drawBastionRemnants=true
@@ -50,10 +50,10 @@ structures {
     B:drawShipwrecks=true
 
     # If set to true mineshaft bounding boxes are drawn. (default: false)
-    B:drawMineShafts=false
+    B:drawMineShafts=true
 
     # If set to true village bounding boxes will be drawn. (default: false)
-    B:drawVillages=false
+    B:drawVillages=true
 
     # If set to true buried treasure will be drawn. (default: true)
     B:drawBuriedTreasures=true
@@ -61,17 +61,17 @@ structures {
     # If set to true pillager outposts will be drawn. (default: true)
     B:drawPillagerOutposts=true
 
-    # If set to true igloos will be drawn. (default: true)
-    B:drawIgloos=true
-
     # If set to true nether fossils will be drawn. (default: true)
     B:drawNetherFossils=true
 
-    # If set to true jungle temple bounding boxes are drawn. (default: true)
-    B:drawJungleTemples=true
+    # If set to true igloos will be drawn. (default: true)
+    B:drawIgloos=true
 
     # If set to true woodland mansions will be drawn. (default: true)
     B:drawMansions=true
+
+    # If set to true jungle temple bounding boxes are drawn. (default: true)
+    B:drawJungleTemples=true
 
     # If set to true ocean monument bounding boxes are drawn. (default: true)
     B:drawOceanMonuments=true
@@ -117,11 +117,11 @@ colors {
     # Color of Bedrock Ceiling Blocks (default: #00ff00)
     H:colorBedrockCeilingBlocks=#00ff00
 
-    # Color of beacon bounding boxes. (default: #ffffff)
-    H:colorBeacons=#ffffff
-
     # Color of ruined portals. (default: #c800ff)
     H:colorRuinedPortals=#c800ff
+
+    # Color of beacon bounding boxes. (default: #ffffff)
+    H:colorBeacons=#ffffff
 
     # Color of igloos. (default: #ffffff)
     H:colorIgloos=#ffffff
@@ -156,14 +156,14 @@ colors {
     # Color of ocean monument bounding boxes. (default: #00ffff)
     H:colorOceanMonuments=#00ffff
 
+    # Color of mineshaft bounding boxes. (default: #c0c0c0)
+    H:colorMineShafts=#c0c0c0
+
     # Color of slime chunks bounding boxes. (default: #006000)
     H:colorSlimeChunks=#006000
 
     # Color of Flower Forest Oxeye Daisy (default: #d3d3d3)
     H:colorFlowerForestOxeyeDaisy=#d3d3d3
-
-    # Color of mineshaft bounding boxes. (default: #c0c0c0)
-    H:colorMineShafts=#c0c0c0
 
     # Color of biome borders. (default: #00ff00)
     H:colorBiomeBorders=#00ff00
@@ -171,11 +171,11 @@ colors {
     # Color of afk spot safe area spheres. (default: #00ff00)
     H:colorAFKSpheresSafeArea=#00ff00
 
-    # Color of nether fossils. (default: #ffffff)
-    H:colorNetherFossils=#ffffff
-
     # Color of mob spawners activation line if spawner nearby. (default: #ff7f00)
     H:colorMobSpawnersLineNearby=#ff7f00
+
+    # Color of nether fossils. (default: #ffffff)
+    H:colorNetherFossils=#ffffff
 
     # Color of pillager outposts. (default: #404040)
     H:colorPillagerOutposts=#404040
@@ -189,20 +189,20 @@ colors {
     # Color of Flower Forest Poppy (default: #ff0000)
     H:colorFlowerForestPoppy=#ff0000
 
-    # Color of Flower Forest White Tulip (default: #d3d3d3)
-    H:colorFlowerForestWhiteTulip=#d3d3d3
-
     # Color of afk spot spheres. (default: #ff0000)
     H:colorAFKSpheres=#ff0000
+
+    # Color of Flower Forest White Tulip (default: #d3d3d3)
+    H:colorFlowerForestWhiteTulip=#d3d3d3
 
     # Color of Flower Forest Pink Tulip (default: #ff69b4)
     H:colorFlowerForestPinkTulip=#ff69b4
 
-    # Color of nether fortress bounding boxes. (default: #ff0000)
-    H:colorNetherFortresses=#ff0000
-
     # Color of Flower Forest Red Tulip (default: #ff0000)
     H:colorFlowerForestRedTulip=#ff0000
+
+    # Color of nether fortress bounding boxes. (default: #ff0000)
+    H:colorNetherFortresses=#ff0000
 
     # Color of Flower Forest Azure Bluet (default: #d3d3d3)
     H:colorFlowerForestAzureBluet=#d3d3d3
@@ -219,11 +219,11 @@ colors {
     # Color of woodland mansions. (default: #8b4513)
     H:colorMansions=#8b4513
 
-    # Color of village bounding boxes. (default: #800080)
-    H:colorVillages=#800080
-
     # Color of bastion remnants. (default: #c0c0c0)
     H:colorBastionRemnants=#c0c0c0
+
+    # Color of village bounding boxes. (default: #800080)
+    H:colorVillages=#800080
 
     # Color of all types of custom boxes. (default: #ffffff)
     H:colorCustom=#ffffff
